# LetsShare

./: CMakeLists.txt  README.md  applink.c  applink_wrapper.c  crypto.cpp  crypto.h  custommessagebox.h  fileclient.cpp  fileclient.h  fileserver.cpp  fileserver.h  httpserver.cpp  httpserver.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  scriptdialog.cpp  scriptdialog.h
